--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dexie": "^4.0.11",
     "jszip": "^3.10.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
